--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -17,4 +17,6 @@
     <string name="maghrib">المغرب</string>
     <string name="sunrise">الشروق</string>
     <string name="en">English</string>
+    <string name="credit">تم باستخدام أكواد من  www.praytimes.org</string>
+
 </resources>
