--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -19,6 +19,8 @@
     <string name="credit">تم باستخدام أكواد من  www.praytimes.org</string>
     <string name="ok">موافق</string>
     <string name="permission_contacts_rationale"> يجب السماح الحصول على الموقع لحساب مواقيت الصلاة</string>
-
+    <string name="empty">لم يتم الحصول على عنوان، تاكد من تشغيل الجي بي اس.</string>
+    <string name="city">مدينة: </string>
+    <string name="timezone">فرق التوقيت: </string>
 
 </resources>
