--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -2,7 +2,6 @@
 <resources>
     <string name="app_name">مواقيت الصلاة</string>
     <string name="text1">مواقيت الصلاة عن يوم: </string>
-
     <string name="Friday">الجمعة</string>
     <string name="Monday">الإثينين</string>
     <string name="Saturday">السبت</string>
@@ -22,5 +21,8 @@
     <string name="empty">لم يتم الحصول على عنوان، تاكد من تشغيل الجي بي اس.</string>
     <string name="city">مدينة: </string>
     <string name="timezone">فرق التوقيت: </string>
-
+    <string name="en">English </string>
+    <string name="dohrT">الجمعة</string>
+    <string name="alert">من فضلك وافق على تمكين الحصول على الموقع</string>
+    <string name="cancel">إلغاء</string>
 </resources>
